feat: add registration form layout

--- a/project-management-app/src/app/auth/components/form-field-password/form-field-password.component.scss
+++ b/project-management-app/src/app/auth/components/form-field-password/form-field-password.component.scss
@@ -1,5 +1,11 @@
-.form__field--password__btn {
+:host {
+  width: 100%;
+}
+
+.form__field__btn {
   position: absolute;
-  top: -9px;
-  right: -60px;
+  top: 0;
+  right: -58px;
+  background-color: transparent;
+  opacity: 0.6;
 }
