--- a/project-management-app/src/app/auth/components/form-field/form-field.component.html
+++ b/project-management-app/src/app/auth/components/form-field/form-field.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="form__field" appearance="fill">
+<mat-form-field class="form__field" appearance="outline">
   <input matInput class="form__input" [type]="type" [formControl]="control" [placeholder]="placeholder">
   <ng-content></ng-content>
 </mat-form-field>
