--- a/project-management-app/src/app/auth/components/form-field/form-field.component.scss
+++ b/project-management-app/src/app/auth/components/form-field/form-field.component.scss
@@ -1,10 +1,15 @@
 @import "variables";
 
+:host {
+  width: 100%;
+}
+
 .form__field {
   width: 100%;
   position: relative;
+  margin: 0 auto;
 }
 
-:host ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
-  padding: 10px 60px 0 10px;
+.form__input {
+  font-size: 16px;
 }
