--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -1,8 +1,15 @@
 @import "variables";
 
 .form {
-  padding: 20px;
+  max-width: 500px;
+  width: 100%;
+  padding: 60px 70px;
   position: relative;
-  background-color: $main-bg;
-  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  background-color: $form-bg;
+  border-radius: $border-radius;
+  box-shadow: $box-shadow;
 }
