--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -1,1 +1,13 @@
 @import "null-style.scss";
+@import "variables";
+@import "components";
+
+body {
+  background-color: $main-bg;
+}
+
+.container {
+  max-width: 1280px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
