feat: add breakpoints variables

--- a/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
+++ b/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
@@ -6,6 +6,6 @@
     <app-form-field-password></app-form-field-password>
     <app-form-field-password></app-form-field-password>
 
-    <app-form-btn [text]="'Sign up'"></app-form-btn>
+    <app-form-btn [text]="'Sign up'" [isDisabled]="!form.valid"></app-form-btn>
   </app-form>
 </div>
