--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -7,3 +7,9 @@ $form-bg: #fff;
 
 //shadows & filters
 $box-shadow: 0 3px 14px 0 rgba(0, 0, 0, 0.2);
+
+//breakpoints
+$mobile: 480px;
+$tablet: 768px;
+$laptop: 1024px;
+$desktop: 1200px;
