--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -12,4 +12,8 @@
   background-color: $form-bg;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+
+  @media screen and (max-width: $tablet) {
+    padding: 30px;
+  }
 }
