--- a/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
+++ b/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-form [form]="form">
-    <h2 class="form__title">Sign up</h2>
+    <h2 class="title">Sign up</h2>
     <app-form-field></app-form-field>
     <app-form-field></app-form-field>
     <app-form-field-password></app-form-field-password>
