--- a/project-management-app/src/app/auth/components/form/form.component.html
+++ b/project-management-app/src/app/auth/components/form/form.component.html
@@ -1,3 +1,5 @@
 <form class="form" [formGroup]="form">
-  <ng-content></ng-content>
+  <div class="form__fields__wrapper">
+    <ng-content></ng-content>
+  </div>
 </form>
