--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -4,16 +4,36 @@
   max-width: 500px;
   width: 100%;
   padding: 60px 70px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0 auto;
   background-color: $form-bg;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+  transform: scaleY(0.8);
+  opacity: 0.1;
+  animation: showForm 0.6s forwards ease-in;
 
   @media screen and (max-width: $tablet) {
     padding: 30px;
+  }
+
+  &__fields__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    animation: showFields 0.4s 0.6s forwards ease-in;
+  }
+}
+
+@keyframes showForm {
+  to {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
+
+@keyframes showFields {
+  to {
+    opacity: 1;
   }
 }
