--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -16,7 +16,7 @@
     padding: 30px;
   }
 
-  &__fields__wrapper {
+  &__fields {
     display: flex;
     flex-direction: column;
     align-items: center;
