--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -4,9 +4,10 @@ $border-radius: 20px;
 //colors
 $main-bg: #fbfbfd;
 $form-bg: #fff;
+$error-bg: #f44336;
 
 //shadows & filters
-$box-shadow: 0 3px 14px 0 rgba(0, 0, 0, 0.2);
+$box-shadow: 2px 4px 13px 0 rgba(0, 0, 0, 0.1);
 
 //breakpoints
 $mobile: 480px;
