feat: add validation service

--- a/project-management-app/src/app/auth/components/form-error/form-error.component.scss
+++ b/project-management-app/src/app/auth/components/form-error/form-error.component.scss
@@ -13,9 +13,9 @@
 
   &__message {
     position: absolute;
-    top: -50px;
-    right: -139px;
-    max-width: 149px;
+    top: -52px;
+    right: -176px;
+    width: 184px;
     padding: 12px 16px;
     background-color: $error-bg;
     color: $form-bg;
