feat: add form link to the login page

--- a/project-management-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/project-management-app/src/app/auth/pages/login-page/login-page.component.html
@@ -11,5 +11,7 @@
     <app-form-submit>
       <app-button [isDisabled]="!form.valid"></app-button>
     </app-form-submit>
+
+    <a mat-button href="#" [routerLink]="'../register'" color="primary">Not registered yet? Sign up</a>
   </app-form>
 </div>
