--- a/project-management-app/src/app/shared/components/button/button.component.scss
+++ b/project-management-app/src/app/shared/components/button/button.component.scss
@@ -7,7 +7,11 @@
   border-radius: $border-radius;
   transition: filter 0.5s;
 
-  &:hover {
+  &:hover:not(.btn:disabled) {
     filter: brightness(160%);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
   }
 }
