--- a/project-management-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/project-management-app/src/app/auth/pages/login-page/login-page.component.html
@@ -12,6 +12,6 @@
       <app-button [isDisabled]="!form.valid"></app-button>
     </app-form-submit>
 
-    <a mat-button href="#" [routerLink]="'../register'" color="primary">Not registered yet? Sign up</a>
+    <a mat-button href="#" [routerLink]="'../signup'" color="primary">Not registered yet? Sign up</a>
   </app-form>
 </div>
