--- a/project-management-app/src/scss/components/_mat-input.scss
+++ b/project-management-app/src/scss/components/_mat-input.scss
@@ -1,6 +1,8 @@
 @import "variables";
 
 .mat-form-field {
+  font-size: 14px;
+
   .mat-form-field-outline {
     box-shadow: $box-shadow;
     border-radius: $border-radius;
