--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -1,14 +1,3 @@
 @import "scss/base/null-style";
 @import "scss/base/base";
-@import "variables";
-@import "components";
-
-body {
-  background-color: $main-bg;
-}
-
-.container {
-  max-width: 1280px;
-  padding: 0 20px;
-  margin: 0 auto;
-}
+@import "scss/components/components";
