refactor: change dimensions

--- a/project-management-app/src/app/auth/components/form-field-password/form-field-password.component.scss
+++ b/project-management-app/src/app/auth/components/form-field-password/form-field-password.component.scss
@@ -4,7 +4,7 @@
 
 .form__field__btn {
   position: absolute;
-  top: 0;
+  top: 3px;
   right: -58px;
   background-color: transparent;
   opacity: 0.6;
