--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-//dimentions
+//dimensions
 $border-radius: 20px;
 
 //colors
@@ -10,7 +10,7 @@ $error-bg: #f44336;
 $box-shadow: 2px 4px 13px 0 rgba(0, 0, 0, 0.1);
 
 //breakpoints
-$mobile: 480px;
-$tablet: 768px;
-$laptop: 1024px;
-$desktop: 1200px;
+$mobile: 48em;
+$tablet: 76.8em;
+$laptop: 102.4em;
+$desktop: 120em;
