--- a/project-management-app/src/app/auth/components/form-error/form-error.component.scss
+++ b/project-management-app/src/app/auth/components/form-error/form-error.component.scss
@@ -15,9 +15,9 @@
     position: absolute;
     top: -52px;
     right: -176px;
-    width: 184px;
-    padding: 12px 16px;
-    font-size: 16px;
+    width: 18.4rem;
+    padding: 0.8em 1.6em;
+    font-size: 2rem;
     color: $form-bg;
     background-color: $error-bg;
     border-radius: $border-radius;
@@ -39,7 +39,7 @@
     @media screen and (max-width: $tablet) {
       top: -128px;
       right: 16px;
-      min-height: 64px;
+      min-height: 6.4rem;
       border-bottom-right-radius: 0;
       border-top-left-radius: $border-radius;
 
