--- a/project-management-app/src/app/auth/components/form-field/form-field.component.scss
+++ b/project-management-app/src/app/auth/components/form-field/form-field.component.scss
@@ -11,5 +11,9 @@
 }
 
 .form__input {
-  font-size: 16px;
+  font-size: 2rem;
+
+  @media screen and (max-width: $mobile) {
+    font-size: 2.4rem;
+  }
 }
