--- a/project-management-app/src/app/auth/components/form-submit/form-submit.component.scss
+++ b/project-management-app/src/app/auth/components/form-submit/form-submit.component.scss
@@ -1,5 +1,5 @@
 .form__submit {
-  width: 170px;
-  height: 50px;
-  margin-bottom: 20px;
+  width: 4em;
+  height: 1.5em;
+  margin-bottom: 2rem;
 }
