--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -1,24 +1,16 @@
 @import "variables";
 
 .form {
-  max-width: 500px;
-  width: 100%;
-  padding: 60px 70px;
+  max-width: 50rem;
+  padding: 1em;
   margin: 0 auto;
+  font-size: 4rem;
   background-color: $form-bg;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
   transform: scaleY(0.8);
   opacity: 0.1;
   animation: showForm 0.6s forwards ease-in;
-
-  @media screen and (max-width: $tablet) {
-    padding: 30px;
-  }
-
-  @media screen and (max-width: $mobile) {
-    padding: 20px;
-  }
 
   &__fields {
     display: flex;
