--- a/project-management-app/src/app/shared/components/button/button.component.scss
+++ b/project-management-app/src/app/shared/components/button/button.component.scss
@@ -3,7 +3,7 @@
 .btn {
   width: 100%;
   height: 100%;
-  font-size: 18px;
+  font-size: 2.4rem;
   border-radius: $border-radius;
   transition: filter 0.5s;
 
@@ -13,5 +13,9 @@
 
   &:disabled {
     cursor: not-allowed;
+  }
+
+  @media screen and (max-width: $mobile) {
+    font-size: 0.6em;
   }
 }
