--- a/project-management-app/src/app/core/header/header/header.component.scss
+++ b/project-management-app/src/app/core/header/header/header.component.scss
@@ -1,4 +1,18 @@
 .header {
-  padding: 1.5rem 3rem;
+  position: relative;
+  padding: 1.5rem 3rem 2.5rem 3rem;
   border-bottom: 2px solid #f4f3f6;
+  transition: all 0.3s ease-in-out;
+  background-color: #fff;
+
+  &.sticky {
+    z-index: 50;
+    background-color: #f4f3f6;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 1.5rem 3rem 2rem 3rem;
+    box-shadow: 0px 4px 6px 2px rgba(60, 60, 60, 0.2);
+  }
 }
