feat: add extended form design

--- a/project-management-app/src/app/auth/components/form-error/form-error.component.scss
+++ b/project-management-app/src/app/auth/components/form-error/form-error.component.scss
@@ -16,7 +16,7 @@
     top: -52px;
     right: -176px;
     width: 18.4rem;
-    padding: 0.8em 1.6em;
+    padding: 1.5rem;
     font-size: 2rem;
     color: $form-bg;
     background-color: $error-bg;
