--- a/project-management-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/project-management-app/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<app-auth-main>
   <app-form [form]="form">
     <app-form-title [title]="title"></app-form-title>
 
@@ -14,4 +14,4 @@
 
     <a mat-button href="#" [routerLink]="'../signup'" color="primary">Not registered yet? Sign up</a>
   </app-form>
-</div>
+</app-auth-main>
