--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -1,16 +1,26 @@
 @import "variables";
 
+:host {
+  width: 100%;
+}
+
 .form {
-  max-width: 50rem;
-  padding: 1em;
-  margin: 0 auto;
+  padding: 12rem 8rem;
   font-size: 4rem;
   background-color: $form-bg;
-  border-radius: $border-radius;
-  box-shadow: $box-shadow;
-  transform: scaleY(0.8);
-  opacity: 0.1;
-  animation: showForm 0.6s forwards ease-in;
+  border-radius: 0 $border-radius $border-radius 0;
+
+  @media screen and (max-width: $tablet) {
+    border-radius: $border-radius;
+    box-shadow: $box-shadow;
+    transform: scaleY(0.8);
+    opacity: 0.1;
+    animation: showForm 0.6s forwards ease-in;
+  }
+
+  @media screen and (max-width: $mobile) {
+    padding: 6rem 3rem;
+  }
 
   &__fields {
     display: flex;
@@ -18,18 +28,5 @@
     align-items: center;
     opacity: 0;
     animation: showFields 0.4s 0.6s forwards ease-in;
-  }
-}
-
-@keyframes showForm {
-  to {
-    opacity: 1;
-    transform: scaleY(1);
-  }
-}
-
-@keyframes showFields {
-  to {
-    opacity: 1;
   }
 }
