--- a/project-management-app/src/scss/base/_base.scss
+++ b/project-management-app/src/scss/base/_base.scss
@@ -22,3 +22,20 @@ html {
 body {
   background-color: $main-bg;
 }
+
+.purple-bg {
+  background: $auth-purple-bg;
+}
+
+@keyframes showForm {
+  to {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
+
+@keyframes showFields {
+  to {
+    opacity: 1;
+  }
+}
