--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
@@ -7,7 +7,7 @@
     border-radius: $border-radius;
     transform: scaleY(0.8);
     opacity: 0.1;
-    animation: showForm 0.6s forwards ease-in;
+    animation: scaleUp 0.6s forwards ease-in;
 
     @media screen and (max-width: $tablet) {
       justify-content: center;
