--- a/project-management-app/src/app/auth/components/form/form.component.scss
+++ b/project-management-app/src/app/auth/components/form/form.component.scss
@@ -15,7 +15,7 @@
     box-shadow: $box-shadow;
     transform: scaleY(0.8);
     opacity: 0.1;
-    animation: showForm 0.6s forwards ease-in;
+    animation: scaleUp 0.6s forwards ease-in;
   }
 
   @media screen and (max-width: $mobile) {
@@ -27,6 +27,6 @@
     flex-direction: column;
     align-items: center;
     opacity: 0;
-    animation: showFields 0.4s 0.6s forwards ease-in;
+    animation: showUp 0.4s 0.6s forwards ease-in;
   }
 }
