feat: add auth service and setup proxy

--- a/project-management-app/src/scss/base/_base.scss
+++ b/project-management-app/src/scss/base/_base.scss
@@ -4,6 +4,12 @@
   font-family: "Roboto", sans-serif;
 }
 
+html,
+body {
+  min-height: 100vh;
+  overflow: auto;
+}
+
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
