--- a/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
+++ b/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
@@ -1,5 +1,5 @@
 <app-auth-main>
-  <app-form [form]="form">
+  <app-form [form]="form" (submit)="onSubmit()">
     <app-form-title [title]="title"></app-form-title>
 
     <app-form-field [control]="form.controls[controlName]" [placeholder]="'Enter your name'"></app-form-field>
