refactor: change getters in login and registration components

--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
@@ -1,4 +1,4 @@
-<main class="main">
+<main class="main" [appBgColor]="'purple-bg'">
   <div class="container">
     <div class="main__content">
       <div class="main__abstract"></div>
