--- a/project-management-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/project-management-app/src/app/auth/pages/login-page/login-page.component.html
@@ -2,11 +2,11 @@
   <app-form [form]="form">
     <app-form-title [title]="title"></app-form-title>
 
-    <app-form-field [control]="form.controls[controlLogin]" [placeholder]="'Enter login'"></app-form-field>
-    <app-form-error [control]="form.controls[controlLogin]" [errors]="formErrors[controlLogin]"></app-form-error>
+    <app-form-field [control]="controlLogin" [placeholder]="'Enter login'"></app-form-field>
+    <app-form-error [control]="controlLogin" [errors]="formErrors[controlLoginKey]"></app-form-error>
 
-    <app-form-field-password [control]="form.controls[controlPassword]"></app-form-field-password>
-    <app-form-error [control]="form.controls[controlPassword]" [errors]="formErrors[controlPassword]"></app-form-error>
+    <app-form-field-password [control]="controlPassword"></app-form-field-password>
+    <app-form-error [control]="controlPassword" [errors]="formErrors[controlPasswordKey]"></app-form-error>
 
     <app-form-submit>
       <app-button [isDisabled]="!form.valid"></app-button>
