--- a/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
+++ b/project-management-app/src/app/auth/pages/registration-page/registration-page.component.html
@@ -2,23 +2,25 @@
   <app-form [form]="form" (submit)="onSubmit()">
     <app-form-title [title]="title"></app-form-title>
 
-    <app-form-field [control]="form.controls[controlName]" [placeholder]="'Enter your name'"></app-form-field>
-    <app-form-error [control]="form.controls[controlName]" [errors]="formErrors[controlName]"></app-form-error>
+    <app-form-field [control]="controlName" [placeholder]="'Enter your name'"></app-form-field>
+    <app-form-error [control]="controlName" [errors]="formErrors[controlNameKey]"></app-form-error>
 
-    <app-form-field [control]="form.controls[controlLogin]" [placeholder]="'Enter login'"></app-form-field>
-    <app-form-error [control]="form.controls[controlLogin]" [errors]="formErrors[controlLogin]"></app-form-error>
+    <app-form-field [control]="controlLogin" [placeholder]="'Enter login'"></app-form-field>
+    <app-form-error [control]="controlLogin" [errors]="formErrors[controlLoginKey]"></app-form-error>
 
-    <app-form-field-password [control]="form.controls[controlPassword]"></app-form-field-password>
-    <app-form-error [control]="form.controls[controlPassword]" [errors]="formErrors[controlPassword]">
+    <app-form-field-password [control]="controlPassword"></app-form-field-password>
+    <app-form-error [control]="controlPassword" [errors]="formErrors[controlPasswordKey]">
     </app-form-error>
 
-    <app-form-field-password [control]="form.controls[controlPasswordConfirm]" [placeholder]="'Confirm password'">
+    <app-form-field-password [control]="controlPasswordConfirm" [placeholder]="'Confirm password'">
     </app-form-field-password>
-    <app-form-error [control]="form.controls[controlPasswordConfirm]" [errors]="formErrors[controlPasswordConfirm]">
+    <app-form-error [control]="controlPasswordConfirm" [errors]="formErrors[controlPasswordConfirmKey]">
     </app-form-error>
 
     <app-form-submit>
       <app-button [isDisabled]="!form.valid"></app-button>
     </app-form-submit>
+
+    <a mat-button href="#" [routerLink]="'../signin'" color="primary">Already have an account? Sign in</a>
   </app-form>
 </app-auth-main>
