feat: add user-boxComponent and some style fixes

--- a/project-management-app/src/app/core/header/header/header.component.html
+++ b/project-management-app/src/app/core/header/header/header.component.html
@@ -1,3 +1,5 @@
 <div appStickyHeader class="header">
   <app-logo></app-logo>
+  <button class="btn" mat-raised-button color="primary">Create new board</button>
+  <app-user-box></app-user-box>
 </div>
