--- a/project-management-app/src/app/core/header/logo/logo.component.scss
+++ b/project-management-app/src/app/core/header/logo/logo.component.scss
@@ -1,16 +1,14 @@
+@import "variables";
+@import "mixins";
+
 .header-logo {
   display: block;
   width: 6rem;
   height: 6rem;
   border-radius: 100rem;
-  box-shadow: 4px 4px 6px 2px rgba(60, 60, 60, 0.4);
-  transition: all 0.3s ease-in-out;
-
-  &:hover {
-    transform: translateY(2px);
-    box-shadow: 1px 1px 6px 1px rgba(60, 60, 60, 0.4);
-  }
+  @include btn-shadow-style;
 }
+
 .logo-img {
   display: block;
   width: 100%;
