feat: add isauth method and add autocomplete styles for input

--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $error-bg: #f44336;
 
 //font colors
 $font-white: rgba(255, 255, 255, 0.95);
+$font-black: #000;
 
 //shadows & filters
 $box-shadow: 2px 4px 13px 0 rgba(0, 0, 0, 0.1);
