refactor: change some components dimensions

--- a/project-management-app/src/app/core/components/message-box/message-box.component.scss
+++ b/project-management-app/src/app/core/components/message-box/message-box.component.scss
@@ -30,8 +30,8 @@
     position: relative;
     top: 0;
     right: 0;
-    width: 5em;
-    height: 3em;
+    width: 70px;
+    height: 42px;
     color: $font-white;
     background-color: transparent;
     border: none;
