--- a/project-management-app/src/app/core/header/header/header.component.scss
+++ b/project-management-app/src/app/core/header/header/header.component.scss
@@ -12,6 +12,8 @@
   gap: 2rem;
   align-items: center;
   width: 100%;
+  font-size: 2.4rem;
+  font-weight: 300;
 
   &.sticky {
     background-color: #f4f3f6;
@@ -22,8 +24,4 @@
     padding: 1.5rem 3rem 2rem 3rem;
     box-shadow: 0px 4px 6px 2px rgba(60, 60, 60, 0.2);
   }
-}
-
-.btn {
-  @include btn-shadow-style;
 }
