--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -1,1 +1,5 @@
 $shadow-color: rgba(60, 60, 60, 0.4);
+$color-white-2: #f4f3f6;
+$color-primary: #673ab7;
+$color-primary-transparent: #673ab766;
+$color-accent: #ffd740;
