--- a/project-management-app/src/scss/base/_base.scss
+++ b/project-management-app/src/scss/base/_base.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 html {
@@ -12,11 +12,11 @@ html {
     font-size: 50%; //1rem=8px;
   }
   /* 1120px  */
-  @media only screen and (max-width: 70em) {
-    font-size: 37.5%; //1rem=6px;
-  }
+  // @media only screen and (max-width: 70em) {
+  //   font-size: 50%; //1rem=8px;
+  // }
   /* 800px  */
   @media only screen and (max-width: 50em) {
-    font-size: 25%; //1rem=4px;
+    font-size: 40%; //1rem=6.4px;
   }
 }
