--- a/project-management-app/src/app/core/page/not-found/not-found.component.scss
+++ b/project-management-app/src/app/core/page/not-found/not-found.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .center-block {
   position: absolute;
   left: 50%;
@@ -7,12 +9,14 @@
   align-items: center;
   flex-direction: column;
   gap: 2.5rem;
+  width: 100%;
 }
 
 .not-found-img {
-  width: 70rem;
+  max-width: 90rem;
+  width: 100%;
   height: 50rem;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
 }
