--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -3,3 +3,5 @@ $color-white-2: #f4f3f6;
 $color-primary: #673ab7;
 $color-primary-transparent: #673ab766;
 $color-accent: #ffd740;
+
+$mobile: 48em;
