--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -11,6 +11,10 @@ body {
   background: $auth-purple-bg;
 }
 
+.white-bg {
+  background: $main-bg;
+}
+
 //autocomplete
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
