--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
@@ -1,10 +1,6 @@
-<main class="main" [appBgColor]="'purple-bg'">
-  <div class="container">
-    <div class="main__content">
-      <div class="main__abstract"></div>
-      <div class="main__form">
-        <ng-content></ng-content>
-      </div>
-    </div>
+<div class="main" [appBgColor]="bgColor">
+  <div class="main__abstract"></div>
+  <div class="main__form">
+    <ng-content></ng-content>
   </div>
-</main>
+</div>
