--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
@@ -1,23 +1,21 @@
 @import "variables";
 
 .main {
-  &__content {
-    display: flex;
-    box-shadow: $box-shadow;
-    border-radius: $border-radius;
-    transform: scaleY(0.8);
-    opacity: 0.1;
-    animation: scaleUp 0.6s forwards ease-in;
+  display: flex;
+  box-shadow: $box-shadow;
+  border-radius: $border-radius;
+  transform: scaleY(0.8);
+  opacity: 0.1;
+  animation: scaleUp 0.6s forwards ease-in;
 
-    @media screen and (max-width: $tablet) {
-      justify-content: center;
-      box-shadow: none;
-    }
+  @media screen and (max-width: $laptop) {
+    justify-content: center;
+    box-shadow: none;
   }
 
   &__abstract {
     height: auto;
-    background: $auth-form-bg;
+    background: url("../../../../assets/images/auth_module/form_bg.png") top left / cover no-repeat;
     border-radius: $border-radius 0 0 $border-radius;
   }
 
@@ -28,16 +26,16 @@
 
   &__form {
     @media screen and (max-width: $tablet) {
-      flex: 0 1 60%;
+      flex: 0 1 85%;
     }
 
     @media screen and (max-width: $mobile) {
-      flex: 0 1 80%;
+      flex: 0 1 100%;
     }
   }
 
   &__abstract {
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: $laptop) {
       display: none;
     }
   }
