--- a/project-management-app/src/app/auth/components/form-field/form-field.component.scss
+++ b/project-management-app/src/app/auth/components/form-field/form-field.component.scss
@@ -4,12 +4,12 @@
   width: 100%;
 }
 
-.form__field {
+.form-field {
   width: 100%;
   position: relative;
   margin: 0 auto;
-}
 
-.form__input {
-  font-size: 2rem;
+  &__input {
+    font-size: 2rem;
+  }
 }
