--- a/project-management-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/project-management-app/src/app/auth/pages/login-page/login-page.component.html
@@ -1,17 +1,19 @@
-<app-auth-main>
-  <app-form [form]="form" (submit)="onSubmit()">
-    <app-form-title [title]="title"></app-form-title>
+<div class="container">
+  <app-auth-main>
+    <app-form [form]="form" (submit)="onSubmit()">
+      <app-form-title [title]="title"></app-form-title>
 
-    <app-form-field [control]="controlLogin" [placeholder]="'Enter login'"></app-form-field>
-    <app-form-error [control]="controlLogin" [errors]="formErrors[controlLoginKey]"></app-form-error>
+      <app-form-field [control]="controlLogin" [placeholder]="'Enter login'"></app-form-field>
+      <app-form-error [control]="controlLogin" [errors]="formErrors[controlLoginKey]"></app-form-error>
 
-    <app-form-field-password [control]="controlPassword"></app-form-field-password>
-    <app-form-error [control]="controlPassword" [errors]="formErrors[controlPasswordKey]"></app-form-error>
+      <app-form-field-password [control]="controlPassword"></app-form-field-password>
+      <app-form-error [control]="controlPassword" [errors]="formErrors[controlPasswordKey]"></app-form-error>
 
-    <app-form-submit>
-      <app-button [isDisabled]="!form.valid"></app-button>
-    </app-form-submit>
+      <app-form-submit>
+        <app-button [isDisabled]="!form.valid"></app-button>
+      </app-form-submit>
 
-    <a mat-button href="#" [routerLink]="'../signup'" color="primary">Not registered yet? Sign up</a>
-  </app-form>
-</app-auth-main>
+      <a mat-button href="#" [routerLink]="'../signup'" color="primary">Not registered yet? Sign up</a>
+    </app-form>
+  </app-auth-main>
+</div>
