--- a/project-management-app/src/app/core/components/message-box/message-box.component.scss
+++ b/project-management-app/src/app/core/components/message-box/message-box.component.scss
@@ -4,19 +4,19 @@
   position: fixed;
   right: 5%;
   bottom: 5%;
-  min-width: 40rem;
+  max-width: 400px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+  padding: 20px;
   background-color: rgba(0, 0, 0, 0.9);
   transform: translateY(150%);
   opacity: 0;
   animation: 0.5s goUp ease-in forwards;
 
   @media screen and (max-width: $mobile) {
-    min-width: 20rem;
-    width: 28rem;
+    max-width: 200px;
+    width: 280px;
   }
 
   &__text {
