--- a/project-management-app/src/app/core/header/create-button/create-button.component.scss
+++ b/project-management-app/src/app/core/header/create-button/create-button.component.scss
@@ -13,7 +13,7 @@
     @extend .btn;
     padding: 0;
     text-align: center;
-    background-color: $color-primary;
+    background-color: $theme-primary;
     color: #fff;
   }
 
