--- a/project-management-app/src/app/core/components/header/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header/header.component.scss
@@ -5,7 +5,7 @@
   position: relative;
   z-index: 50;
   padding: 1.5rem 3rem 2.5rem 3rem;
-  border-bottom: 2px solid #f4f3f6;
+  border-bottom: 2px solid $color-white-2;
   transition: all 0.3s ease-in-out;
   background-color: #fff;
   display: flex;
@@ -16,7 +16,7 @@
   font-weight: 300;
 
   &.sticky {
-    background-color: #f4f3f6;
+    background-color: $color-white-2;
     position: fixed;
 
     top: 0;
