--- a/project-management-app/src/app/core/components/header/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header/header.component.scss
@@ -7,7 +7,7 @@
   padding: 1.5rem 3rem 2.5rem 3rem;
   border-bottom: 2px solid $color-white-2;
   transition: all 0.3s ease-in-out;
-  background-color: #fff;
+  background-color: $form-bg;
   display: flex;
   gap: 2rem;
   align-items: center;
@@ -18,10 +18,9 @@
   &.sticky {
     background-color: $color-white-2;
     position: fixed;
-
     top: 0;
     left: 0;
     padding: 1.5rem 3rem 2rem 3rem;
-    box-shadow: 0px 4px 6px 2px rgba(60, 60, 60, 0.2);
+    box-shadow: 0px 4px 6px 2px $shadow-color;
   }
 }
