feat: edit welcome component

--- a/project-management-app/src/app/main/pages/welcome/welcome.component.html
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.html
@@ -1,1 +1,3 @@
-<div class="main-welcome-img"></div>
+<div class="welcome-main-img" [class.active]="pageActivation"></div>
+<div class="welcome-arrows" [class.active]="pageActivation"></div>
+<div class="welcome-top-cube" [class.active]="pageActivation"></div>
