feat: edit welcome component

--- a/project-management-app/src/app/main/pages/welcome/welcome.component.html
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.html
@@ -1,3 +1,10 @@
-<div class="welcome-main-img" [class.active]="pageActivation"></div>
-<div class="welcome-arrows" [class.active]="pageActivation"></div>
-<div class="welcome-top-cube" [class.active]="pageActivation"></div>
+<main>
+  <h1 [class.active]="pageActivation">Project<br>Management<br>App</h1>
+  <div class="welcome_main-img" [class.active]="pageActivation"></div>
+  <div class="welcome_arrows" [class.active]="pageActivation"></div>
+  <div class="welcome_top-cube" [class.active]="pageActivation"></div>
+  <div class="welcome_left-cube" [class.active]="pageActivation"></div>
+  <div class="welcome_left-bottom-cube" [class.active]="pageActivation"></div>
+  <div class="welcome_right-bottom-cube" [class.active]="pageActivation"></div>
+  <div class="welcome_grid" [class.active]="pageActivation"></div>
+</main>
