--- a/project-management-app/src/app/main/pages/welcome/welcome.component.scss
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.scss
@@ -1,5 +1,7 @@
 @import "mixins";
 
+@import url('https://fonts.googleapis.com/css2?family=Niconne&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :host {
   display: block;
   position: relative;
@@ -9,73 +11,188 @@
   background: linear-gradient(to bottom right, #02C1CA, #415789);
 }
 
-.welcome-main-img {
-  position: relative;
+.welcome_main-img {
+  position: absolute;
   @include background-image-block("../../../../assets/images/png/welcome-main-img.png", 100%, 0);
   left: 10%;
-  opacity: 0;
-  transition: opacity 2s;
+  transform: scale(0);
+  transition: transform 0.5s;
 }
 
-.welcome-main-img.active {
-  opacity: 1;
+.welcome_main-img.active {
+  transform: scale(1);
 }
 
-.welcome-arrows {
+.welcome_arrows {
   position: absolute;
   @include background-image-block("../../../../assets/images/svg/welcome-arrows.svg", 89%, 0);
   left: 105%;
-  transition: left 1.2s;
+  transition: left 1s 0.5s;
 }
 
-.welcome-top-cube {
+.welcome_top-cube {
   position: absolute;
-  @include background-image-block("../../../../assets/images/svg/top-cube.svg", 100%, 0);
-  top: -20%;
+  @include background-image-block("../../../../assets/images/svg/welcome-top-cube.svg", 100%, 0);
+  top: -30%;
   left: 47%;
-  transition: top 1.2s;
+  transition: top 0.7s 0.3s;
 }
 
-.welcome-top-cube.active {
+.welcome_top-cube.active {
   top: -10%;
 }
 
+.welcome_left-cube {
+  position: absolute;
+  @include background-image-block("../../../../assets/images/svg/welcome-left-cube.svg", 100%, 0);
+  left: -50%;
+  transition: left 0.7s 0.3s;
+}
+
+.welcome_left-bottom-cube {
+  position: absolute;
+  @include background-image-block("../../../../assets/images/svg/welcome-left-bottom-cube.svg", 100%, 0);
+  top: 120%;
+  transition: top 0.7s 0.3s;
+}
+
+.welcome_right-bottom-cube {
+  position: absolute;
+  @include background-image-block("../../../../assets/images/svg/welcome-right-bottom-cube.svg", 100%, 0);
+  top: 120%;
+  transition: top 0.7s 0.3s;
+}
+
+.welcome_grid {
+  position: absolute;
+  @include background-image-block("../../../../assets/images/png/welcome-grid.png", 100%, 0);
+  opacity: 0;
+  transition: opacity 0.2s 1.5s;
+  z-index: 500;
+}
+
+.welcome_grid.active {
+  opacity: 1;
+}
+
+h1 {
+  position: absolute;
+  font-size: 7rem;
+  line-height: 8rem;
+  font-weight: 700;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  opacity: 0;
+  transition: opacity 0.2s 1.5s;
+  z-index: 1000;
+}
+
+h1.active {
+  opacity: 1;
+}
+
 @media screen and (orientation: landscape) {
-  .welcome-main-img {
+  .welcome_main-img {
     width: calc(80vh * 940 / 788);
     height: 80vh;
     top: 21%;
   }
 
-  .welcome-arrows.active {
+  .welcome_arrows.active {
     width: 30vh;
     height: 20vh;
     left: 58%;
-    top: 35%;
+    top: 19%;
   }
 
-  .welcome-top-cube.active {
+  .welcome_top-cube.active {
     width: 30vh;
     height: 25vh;
+  }
+
+  .welcome_left-cube.active {
+    width: 43vh;
+    height: 37vh;
+    top: 22%;
+    left: -4%;
+  }
+
+  .welcome_left-bottom-cube.active {
+    width: 15vh;
+    height: 13vh;
+    top: 78%;
+    left: 8%;
+  }
+
+  .welcome_right-bottom-cube.active {
+    width: 63vh;
+    height: 53vh;
+    top: 58%;
+    right: -13%;
+  }
+
+  .welcome_grid.active {
+    width: 15vh;
+    height: 14vh;
+    top: 30%;
+    right: 65%;
+  }
+
+  h1 {
+    left: 20%;
+    top: 4%;
   }
 }
 
 @media screen and (orientation: portrait) {
-  .welcome-main-img {
+  .welcome_main-img {
     width: 80vw;
     height: calc(80vw * 788 / 940);
     top: 33%;
   }
 
-  .welcome-arrows.active {
+  .welcome_arrows.active {
     width: 30vw;
     height: 20vw;
     left: 67%;
-    top: 35%;
+    top: 23%;
   }
 
-  .welcome-top-cube.active {
+  .welcome_top-cube.active {
     width: 42vw;
     height: 35vw;
+  }
+
+  .welcome_left-cube.active {
+    width: 38vw;
+    height: 32vw;
+    top: 34%;
+    left: -9%;
+  }
+
+  .welcome_left-bottom-cube.active {
+    width: 15vw;
+    height: 13vw;
+    top: 67%;
+    left: 4%;
+  }
+
+  .welcome_right-bottom-cube.active {
+    width: 50vw;
+    height: 42vw;
+    top: 76%;
+    right: -16%;
+  }
+
+  .welcome_grid.active {
+    width: 17vw;
+    height: 17vw;
+    top: 34%;
+    right: 51%;
+  }
+
+  h1 {
+    left: 12%;
+    top: 11%;
   }
 }
