feat: add team container

--- a/project-management-app/src/app/main/pages/welcome/welcome.component.html
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.html
@@ -7,4 +7,14 @@
   <div class="welcome_left-bottom-cube" [class.active]="pageActivation"></div>
   <div class="welcome_right-bottom-cube" [class.active]="pageActivation"></div>
   <div class="welcome_grid" [class.active]="pageActivation"></div>
+  <div class="welcome_team-container" [class.active]="pageActivation">
+    <p [class.active]="pageActivation">Our team</p>
+    <div class="welcome_team-inner-container">
+      <div class="welcome_ihar-img team-img"></div>
+      <div class="welcome_tetiana-img team-img"></div>
+      <div class="welcome_ilia-img team-img"></div>
+    </div>
+  </div>
+  <p [class.active]="pageActivation">Take your company to<br>
+    the next level with a lot of<br>ideas and making great<br>progress</p>
 </main>
