--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -5,3 +5,16 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+%flex-column-pattern {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+%flex-normal-pattern {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
