feat: add buttons

--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -3,7 +3,11 @@ $border-radius: 20px;
 
 //main colors
 $theme-primary: #673ab7;
+$theme-primary-transparent: #673ab766;
 $theme-accent: #ffd740;
+$color-white-2: #f4f3f6;
+$color-grey: #bdcbd4;
+$color-grey-dark: #747691;
 
 //block colors
 $main-bg: #fbfbfd;
@@ -16,6 +20,7 @@ $font-black: #000;
 
 //shadows & filters
 $box-shadow: 2px 4px 13px 0 rgba(0, 0, 0, 0.1);
+$shadow-color: rgba(60, 60, 60, 0.4);
 
 //breakpoints
 $mobile: 480px;
