--- a/project-management-app/src/app/main/pages/welcome/welcome.component.html
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.html
@@ -1,5 +1,13 @@
 <main>
   <h1 [class.active]="pageActivation">Project<br>Management<br>App</h1>
+  <div class="welcome_buttons-container" [class.active]="pageActivation">
+    <button mat-fab color="primary" title="log in" class="welcome_button" routerLink="/auth/signin">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    <button mat-fab color="primary" title="sign up" class="welcome_button" routerLink="/auth/signup">
+      <mat-icon>account_box</mat-icon>
+    </button>
+  </div>
   <div class="welcome_main-img" [class.active]="pageActivation"></div>
   <div class="welcome_arrows" [class.active]="pageActivation"></div>
   <div class="welcome_top-cube" [class.active]="pageActivation"></div>
