--- a/project-management-app/src/app/main/pages/welcome/welcome.component.scss
+++ b/project-management-app/src/app/main/pages/welcome/welcome.component.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import "variables";
 
 @import url('https://fonts.googleapis.com/css2?family=Niconne&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
@@ -256,11 +257,19 @@ p {
         border-radius: 17vh;
       }
     }
+  }
 
+  .welcome_buttons-container {
+    width: 20vh;
+    height: 9vh;
+    row-gap: 2vh;
+    right: 4%;
+    top: 6%;
   }
 }
 
 @media screen and (orientation: portrait) {
+
   .welcome_main-img {
     width: 80vw;
     height: calc(80vw * 788 / 940);
@@ -308,13 +317,13 @@ p {
   }
 
   h1 {
-    left: 12%;
+    left: 10%;
     top: 11%;
   }
 
   p {
     right: 3%;
-    top: 38%;
+    top: 41%;
   }
 
   .welcome_team-container {
@@ -339,4 +348,29 @@ p {
       }
     }
   }
+
+  .welcome_buttons-container {
+    flex-direction: column;
+    width: 10vw;
+    height: 20vw;
+    row-gap: 2vw;
+    right: 4%;
+    top: 6%;
+  }
+}
+
+.welcome_buttons-container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  @extend %display-pattern;
+
+  &.active {
+    opacity: 1;
+  }
+}
+
+.welcome_button {
+  @include btn-shadow-style;
 }
