--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -18,3 +18,18 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@mixin btn-shadow-style {
+  box-shadow: 1px 1px 6px 1px $shadow-color;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    transform: translateY(-2px);
+    box-shadow: 4px 4px 6px 2px $shadow-color;
+  }
+
+  &:active {
+    transform: translateY(0);
+    box-shadow: 1px 1px 6px 1px $shadow-color;
+  }
+}
